--- a/faq/index.html
+++ b/faq/index.html
@@ -143,6 +143,8 @@
 					<li><a target="_blank" href="https://doteightplus.com/doteighthost/">DotHost</a></li>
 					<li><a target="_blank" href="https://www.google.com/search?client=opera&q=abolade+greatness&sourceid=opera&ie=UTF-8&oe=UTF-8">Abolade Greatness</a></li>
 					<li><a target="_blank" href="https://www.google.com/search?client=opera&q=Aholu+Samuel&sourceid=opera&ie=UTF-8&oe=UTF-8">Aholu Samuel</a></li>
+					<li><a target="_blank" href="https://fuoyepedia.com.ng">Ayodeji Omojola</a></li>
+					<li><a target="_blank" href="https://fuoyepedia.com.ng">FuoyePedia</a></li>
 					<li><a target="_blank" href="https://doteightplus.com/">DotEightPlus</a></li>
 					</li>
 				</ul>
